
- CPU
  - Implemented PCLMULQDQ AES instruction
  - Implemented Intel VMXx2 extensions:
    - Enabled extended VMX capability MSRs
    - Implemented VMX controls for loading/storing of MSR_PAT and MSR_EFER
    - Enabled secondary proc-based vmexec controls:
       - Implemented APIC virtualization
       - Implemented WBINVD VMEXIT control
       - Implemented RDTSCP VMEXIT control
    In order to enable emulation of above VMX extensions configure with
        --enable-vmx=2 option
  - Bugfixes for CPU emulation correctness
  - Fixed Bochs crash when accessing the first byte above emulated memory size

- Internal Debugger
  - Introduced range read/write physical watchpoints
  - Allow reloading of segment registers from internal debugger

- BIOS
  - Fix MTRR configuration (prevented boot of modern Linux kernels)
  - Fix interrupt vectors for INT 60h-66h (reserved for user interrupt) by
    setting them to zero

- I/O Devices
  - USB HP DeskJet 920C printer device emulation (Ben Lunt)

- Misc
  - Updated Bochs TESTFORM to version 0.5

- SF patches applied
 [2960379] Fix build with -Wformat -Werror=format-security by Per Oyvind Karlsen
 [2938273] allow instrumentation to change execute by Konrad Grochowski
 [2926072] Indirection operators in expressions by Derek Peschel
 [2914433] makesym.perl misses symbols by John R. Jackson
 [2908481] USB Printer by Ben Lunt

- these S.F. bugs were closed/fixed
 [2981161] Allow DMA transfers to continue when CPU is in HALT state
 [2795115] NX fault could be missed
 [2964824] bad newline sequence in aspi-win32.h
  [913419] configure options and build process needs some work
 [2938398] gdbstub compile error with x86_64 enabled
 [2374455] shutdown/reset type 05 should reinit the PICs
 [1921294] extended memory less than 1M wrong size
 [1947249] BX_USE_EBDA_TABLES and MP table placement
 [1933859] BX_USE_EBDA_TABLES and memory overlapping
 [2923680] "help dregs" is a syntax error
 [2919661] CPU may fail to do 16bit near call